Provide dropdown links to both jschon and jschon.dev repos

--- a/html/index.html
+++ b/html/index.html
@@ -9,14 +9,18 @@
 </head>
 <body class="vh-100">
 <div class="d-flex flex-column h-100">
-    <div class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-dark bg-primary">
         <span class="navbar-text lead">
             jschon.dev | JSON Schema Validator
         </span>
-        <a class="navbar-brand text-reset" href="https://github.com/marksparkza/jschon" target="_blank">
-            <img src="/static/GitHub-Mark-Light-32px.png">
-        </a>
-    </div>
+        <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="/static/GitHub-Mark-Light-32px.png"></a>
+            <div class="dropdown-menu dropdown-menu-right">
+                <a class="dropdown-item" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
+                <a class="dropdown-item" href="https://github.com/marksparkza/jschon.dev" target="_blank">jschon.dev</a>
+            </div>
+        </div>
+    </nav>
     <div class="container-fluid d-flex flex-column flex-grow-1">
         <div class="row mt-2">
             <div class="col">
@@ -59,16 +63,17 @@
                           style="background-color: #ffffff"></textarea>
             </div>
         </div>
-        <div class="row navbar navbar-dark bg-primary">
+        <footer class="row navbar navbar-dark bg-primary">
             <small class="navbar-text">
                 Copyright &copy;
                 <script>document.write(new Date().getFullYear())</script>
                 Mark Jacobson
             </small>
-        </div>
+        </footer>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 <script type="text/javascript" src="static/evaluate.js"></script>
 </body>
 </html>
