Create a new catalogue for each request

--- a/html/index.html
+++ b/html/index.html
@@ -40,10 +40,10 @@
         </div>
         <div class="row my-2">
             <div class="col">
-                <select class="form-control" id="metaschema"
+                <select class="form-control" id="version"
                         title='If the "$schema" keyword is present, it will override the option selected here.'>
-                    <option value="https://json-schema.org/draft/2020-12/schema">Metaschema: 2020-12</option>
-                    <option value="https://json-schema.org/draft/2019-09/schema">Metaschema: 2019-09</option>
+                    <option value="2020-12">Metaschema: 2020-12</option>
+                    <option value="2019-09">Metaschema: 2019-09</option>
                 </select>
             </div>
             <div class="col-6">
