Only load the metaschema for the selected version

--- a/html/index.html
+++ b/html/index.html
@@ -40,10 +40,9 @@
         </div>
         <div class="row my-2">
             <div class="col">
-                <select class="form-control" id="version"
-                        title='If the "$schema" keyword is present, it will override the option selected here.'>
-                    <option value="2020-12">Metaschema: 2020-12</option>
-                    <option value="2019-09">Metaschema: 2019-09</option>
+                <select class="form-control" id="version">
+                    <option value="2020-12">Version: 2020-12</option>
+                    <option value="2019-09">Version: 2019-09</option>
                 </select>
             </div>
             <div class="col-6">
