--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>jschon.dev | JSON Schema Validator</title>
+    <title>jschon.dev | JSON Schema Sandbox</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="static/favicon.ico">
     <link rel="stylesheet" href="static/cerulean.bootstrap.min.css">
+    <link rel="stylesheet" href="static/jquery-ui-1.12.1.custom/jquery-ui.min.css">
 </head>
-<body class="vh-100">
-<div class="d-flex flex-column h-100">
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-text lead">
-            jschon.dev | JSON Schema Validator
+<body>
+<div class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-dark bg-dark px-3">
+        <span class="navbar-text h5 mt-2">
+            jschon.dev | JSON Schema Sandbox
         </span>
         <div class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><img src="/static/GitHub-Mark-Light-32px.png"></a>
@@ -21,7 +22,7 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid d-flex flex-column flex-grow-1">
+    <div id="input-panel" class="container-fluid d-flex flex-column border-bottom border-dark border-2" style="height: 50vh">
         <div class="row mt-2">
             <div class="col">
                 <label for="schema" class="form-label">JSON Schema</label>
@@ -32,40 +33,40 @@
         </div>
         <div class="row flex-grow-1">
             <div class="col">
-                <textarea class="form-control font-monospace h-100" id="schema"></textarea>
+                <textarea id="schema" class="form-control font-monospace h-100"
+                          style="resize: none; white-space: pre;"></textarea>
             </div>
             <div class="col">
-                <textarea class="form-control font-monospace h-100" id="instance"></textarea>
+                <textarea id="instance" class="form-control font-monospace h-100"
+                          style="resize: none; white-space: pre;"></textarea>
             </div>
         </div>
-        <div class="row my-2">
+        <div class="row my-3">
             <div class="col">
-                <select class="form-control" id="version">
+                <select id="version" class="form-control">
                     <option value="2020-12">Version: 2020-12</option>
                     <option value="2019-09">Version: 2019-09</option>
                 </select>
             </div>
             <div class="col-6 d-grid">
-                <input class="btn btn-secondary" id="evaluate" type="button" value="Evaluate"
-                       onclick="eval();">
+                <input id="evaluate" type="button" value="Evaluate" onclick="eval();"
+                       class="btn btn-secondary">
             </div>
             <div class="col">
-                <select class="form-control" id="format">
+                <select id="format" class="form-control">
                     <option value="flag">Output: Flag</option>
                     <option value="basic">Output: Basic</option>
                 </select>
             </div>
         </div>
-        <div class="row h-25 mb-2">
-            <div class="col">
-                <textarea class="form-control font-monospace h-100" id="result" readonly
-                          style="background-color: #ffffff"></textarea>
-            </div>
-        </div>
     </div>
-    <footer>
+    <div class="m-2 p-2 flex-grow-1">
+        <pre id="result"></pre>
+    </div>
+    <hr>
+    <footer class="px-3 pb-3">
         <small>
-            Copyright &copy;
+            &copy;
             <script>document.write(new Date().getFullYear())</script>
             Mark Jacobson
         </small>
@@ -73,6 +74,10 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="static/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
+<script>
+    $("#input-panel").resizable({handles: "s", minHeight: 200});
+</script>
 <script type="text/javascript" src="static/evaluate.js"></script>
 </body>
 </html>
