Add detailed output option

--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,7 @@
                 <select id="format" class="form-control">
                     <option value="flag">Output: Flag</option>
                     <option value="basic">Output: Basic</option>
+                    <option value="detailed">Output: Detailed</option>
                     <option value="verbose">Output: Verbose</option>
                 </select>
             </div>
