Use higher res GitHub logo

--- a/html/index.html
+++ b/html/index.html
@@ -16,13 +16,17 @@
         </span>
         <ul class="nav justify-content-end">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><img src="/static/readthedocs-logo-light.svg" style="height: 32px"></a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
+                    <img src="/static/readthedocs-logo-light.svg" style="height: 32px">
+                </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <a class="dropdown-item" href="https://jschon.readthedocs.io/en/stable/" target="_blank">Documentation</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><img src="/static/GitHub-Mark-Light-32px.png"></a>
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
+                    <img src="/static/GitHub-Mark-Light-64px.png" style="height: 32px">
+                </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <a class="dropdown-item" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
                     <a class="dropdown-item" href="https://github.com/marksparkza/jschon.dev" target="_blank">jschon.dev</a>
