Call it a validator

--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>jschon.dev | JSON Schema Sandbox</title>
+    <title>jschon.dev | JSON Schema Validator</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="static/favicon.ico">
@@ -12,7 +12,7 @@
 <div class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-dark bg-dark px-3">
         <span class="navbar-text h5 mt-2">
-            jschon.dev | JSON Schema Sandbox
+            jschon.dev | JSON Schema Validator
         </span>
         <ul class="nav justify-content-end">
             <li class="nav-item dropdown">
