Start with valid input

--- a/html/index.html
+++ b/html/index.html
@@ -46,11 +46,11 @@
         <div class="row flex-grow-1">
             <div class="col">
                 <textarea id="schema" class="form-control font-monospace h-100"
-                          style="resize: none; white-space: pre;"></textarea>
+                          style="resize: none; white-space: pre;">{}</textarea>
             </div>
             <div class="col">
                 <textarea id="instance" class="form-control font-monospace h-100"
-                          style="resize: none; white-space: pre;"></textarea>
+                          style="resize: none; white-space: pre;">{}</textarea>
             </div>
         </div>
         <div class="row my-3">
